front-end/src/App.css
.App {
  color: aliceblue;
  margin-bottom: 10px;
  text-align: center;
}

body {
  background-image: url("../Images/c-o-esports-worlds2017-art-2\ -\ Copy.png");
}


.searchDiv{
  margin-bottom: 20px;
}

.matchBox{
  padding: 5px 20px;
  color: rgba(240, 248, 255, 0.614);
  margin: 0px 20%;
  background-color: #282c34de;
}



img {
  color: transparent;
  }

.victory {
  color: lightblue;
}

.defeat {
  color: red
}

.profileBox {
  color: aliceblue;
  background-color: #282c34db;
  padding: 10px;
  display:flex;
  justify-content: center;
  align-items: center;
  border-bottom: 2px solid black;
}

.playerBox{
  padding: 10px;
  padding: 10px;
  display:flex;
  align-items: center;
  justify-content: space-between;
}

.summonerBox{
  text-align: center;
}

.itemBox{
  display: flex;
}


.itemImg{
  height: 50px;
}

.sumName {
  color:white;
  margin-right: 15px;
}

.deaths {
  color: red;
}

.profileIcon {
  height: 75px;
  border-radius: 50px;
}
.champIcon {
  height: 75px;
  margin-right: 10px;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

